<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/_250sdp"
    android:layout_height="wrap_content"
    android:background="@drawable/border"
    android:orientation="vertical"
    android:paddingLeft="@dimen/_15sdp"
    android:paddingTop="@dimen/_10sdp"
    android:paddingRight="@dimen/_15sdp"
    android:paddingBottom="@dimen/_15sdp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_7sdp"
        android:layout_marginBottom="@dimen/_3sdp"
        android:fontFamily="@font/segoeui"
        android:text="@string/toc_do"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_16sdp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            style="@style/textSpeed"
            android:text="@string/thoi_gian_bat" />

        <TextView
            android:id="@+id/text_speed_on"
            style="@style/textSpeed"
            android:gravity="right"
            android:paddingRight="@dimen/_10sdp"
            android:text="50ms" />
    </LinearLayout>

    <SeekBar
        android:id="@+id/seek_bar_on"
        style="@style/seekBar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            style="@style/textSpeed"
            android:text="@string/thoi_gian_tat" />

        <TextView
            android:id="@+id/text_speed_off"
            style="@style/textSpeed"
            android:gravity="right"
            android:paddingRight="@dimen/_10sdp"
            android:text="50ms" />
    </LinearLayout>

    <SeekBar
        android:id="@+id/seek_bar_off"
        style="@style/seekBar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            style="@style/textSpeed"
            android:text="@string/thoi_gian_chay" />

        <TextView
            android:id="@+id/text_speed_run"
            style="@style/textSpeed"

            android:gravity="right"
            android:paddingRight="@dimen/_10sdp"
            android:text="2 s" />
    </LinearLayout>

    <SeekBar
        android:id="@+id/seek_bar_run"
        style="@style/seekBar"
        android:max="8" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginBottom="3dp"
        android:gravity="center"
        android:orientation="horizontal">

        <com.balysv.materialripple.MaterialRippleLayout
            android:layout_width="@dimen/_60sdp"
            android:layout_height="wrap_content"
            app:mrl_rippleColor="@color/colorPrimary">

            <TextView
                android:id="@+id/text_try"
                android:layout_width="@dimen/_60sdp"
                android:layout_height="wrap_content"
                android:background="@drawable/button2"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/thu"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />
        </com.balysv.materialripple.MaterialRippleLayout>

        <com.balysv.materialripple.MaterialRippleLayout
            android:layout_width="@dimen/_60sdp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_15sdp"
            app:mrl_rippleColor="@color/colorPrimary">

            <TextView
                android:id="@+id/text_cancel"
                android:layout_width="@dimen/_60sdp"
                android:layout_height="wrap_content"
                android:background="@drawable/button2"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/huy"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />
        </com.balysv.materialripple.MaterialRippleLayout>

        <com.balysv.materialripple.MaterialRippleLayout
            android:layout_width="@dimen/_60sdp"
            android:layout_height="wrap_content"
            app:mrl_rippleColor="@color/colorPrimary">

            <TextView
                android:id="@+id/text_save"
                android:layout_width="@dimen/_60sdp"
                android:layout_height="wrap_content"
                android:background="@drawable/button1"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/luu"
                android:textColor="#fff"
                android:textSize="18sp" />
        </com.balysv.materialripple.MaterialRippleLayout>
    </LinearLayout>
</LinearLayout>