<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/border"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="15sp">

    <TextView
        android:layout_width="@dimen/_275sdp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/seguisb"
        android:text="@string/cho_phep"
        android:textColor="#000"
        android:textSize="@dimen/_13sdp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="7dp"
        android:gravity="right"
        android:orientation="horizontal">

        <com.balysv.materialripple.MaterialRippleLayout
            android:layout_width="@dimen/_90sdp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dp_25"
            app:mrl_rippleColor="@color/colorPrimary">

            <TextView
                android:id="@+id/text_deny"
                android:layout_width="@dimen/_90sdp"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/dp_25"
                android:background="@drawable/button2"
                android:fontFamily="@font/segoeui"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/tu_choi"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_13sdp"
                android:textStyle="bold" />
        </com.balysv.materialripple.MaterialRippleLayout>

        <com.balysv.materialripple.MaterialRippleLayout
            android:layout_width="@dimen/_90sdp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/_17sdp"
            app:mrl_rippleColor="@color/colorPrimary">

            <TextView
                android:id="@+id/text_accept"
                android:layout_width="@dimen/_90sdp"
                android:layout_height="wrap_content"
                android:background="@drawable/button1"
                android:fontFamily="@font/segoeui"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/chap_nhan"
                android:textColor="#fff"
                android:textSize="@dimen/_13sdp"
                android:textStyle="bold" />
        </com.balysv.materialripple.MaterialRippleLayout>
    </LinearLayout>
</LinearLayout>